# python-project-52

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: app-tests.yml
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
static/: staticfiles.json
task_manager/: __init__.py  admin.py  mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_author_alter_task_description_and_more.py  0003_alter_task_author_alter_task_executor.py  0004_taskstolabels_task_labels.py
task_manager/templates/: base.html  base_form.html  delete_form.html  header_auth.html  header_base.html  header_not_auth.html  index.html
task_manager/templates/labels/: index.html
task_manager/templates/statuses/: index.html
task_manager/templates/tasks/: detail.html  index.html
task_manager/templates/users/: create_user.html  index.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py  0003_alter_user_first_name_alter_user_last_name.py
