[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=5.0.0",
    "dj-database-url>=3.0.1",
    "django>=5.2.7",
    "django-bootstrap5>=25.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "rollbar>=1.3.0",
    "whitenoise>=6.11.0",
]
package = ["task_manager"]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
